# tap-fedidb

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yaml  build.yml  test.yaml  test.yml
tap_fedidb/: __init__.py  __main__.py  tap.py
tests/: test_core.py
