[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "tap-fedidb"
description = "Singer tap for FediDB, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [ "ELT", "FediDB", "singer.io" ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.0a5",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-fedidb = "tap_fedidb:TapFediDB.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-fedidb#readme"
Homepage = "https://github.com/reservoir-data/tap-fedidb"
Repository = "https://github.com/reservoir-data/tap-fedidb"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [ "deptry>=0.12", "pytest>=9", "singer-sdk[testing]" ]
typing = [
  "mypy>=1.19",
  "ty>=0.0.1a35",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
isort.known-first-party = [ "tap_fedidb" ]
isort.required-imports = [ "from __future__ import annotations" ]
pydocstyle.convention = "google"

[tool.deptry]
[tool.deptry.package_module_name_map]
mypy = "mypy"
pytest = "pytest"
tap-fedidb = "tap_fedidb"
types-requests = "requests"
[tool.deptry.per_rule_ignores]
DEP002 = [ "deptry", "mypy", "pytest" ]

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env]
dependencies.dependency_groups = [ "testing" ]
dependencies.commands = [ [ "deptry", "." ] ]
sync.commands = [ [ "tap-fedidb", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
typing.dependency_groups = [ "testing", "typing" ]
typing.commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_fedidb", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_fedidb", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_FEDIDB_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
