[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "tap-fedidb"
description = "Singer tap for FediDB, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [ "ELT", "FediDB", "singer.io" ]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.54.4",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-fedidb = "tap_fedidb:TapFediDB.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-fedidb#readme"
Homepage = "https://github.com/reservoir-data/tap-fedidb"
Repository = "https://github.com/reservoir-data/tap-fedidb"

[dependency-groups]
dev = [
  "deptry>=0.12",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.40",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.11"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
  "PD",     # pandas-vet
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [ "error" ]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [ "tox>=4.55", "tox-uv>=1.35" ]
env_list = [
  "dependencies",
  "typing",
  { prefix = "3.", start = 12 },
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.sync]
description = "run tap with sample data"
commands = [ [ "tap-fedidb", { replace = "posargs", default = [ "--config=ENV" ], extend = true } ] ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_fedidb", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_fedidb", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run unit tests on Python {py_dot_ver}"
dependency_groups = [ "testing" ]
pass_env = [ "TAP_FEDIDB_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
base_python_file = [ ".python-version" ]
